Fixed responsiveness issues and routes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 id="title">Pregunta Seria</h1>
-    <img src="./assets/cat_pleading.jpg" alt="cat pleading" id="image" />
+    <img src="./assets/cat_pleading.jpg" id="image" />
     <h3 id="text">¿Aún vamos para Punta Cana?</h3>
 
     <div id="button-set">
